--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "10.4.5",
+    "axios": "^1.2.2",
     "bootstrap": "^5.2.0-beta1",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
